<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btn_search"
        android:title="@string/action_search"
        android:icon="@drawable/search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView">
    </item>
    <item
        android:id="@+id/item_home"
        android:icon="@drawable/ic_login_24"
        android:title="@string/home"></item>
    <item
        android:id="@+id/item_aboutme"
        android:icon="@drawable/ic_login_24"
        android:title="@string/about_me"></item>
    <item
        android:id="@+id/item_login"
        android:icon="@drawable/ic_login_24"
        android:title="@string/exit"></item>

</menu>