<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="50dp"
    android:layout_marginLeft="50dp"
    android:orientation="vertical"
    tools:context=".Activity_DangNhap">

    <TextView
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="35sp"
        android:text="@string/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="188dp"
            android:layout_height="137dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/dangnhap"></ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/InputUserName"></EditText>
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"
            android:hint="@string/InputPassword"></EditText>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login_Btn"></Button>
            <Button
                android:id="@+id/btn_register"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_text"></Button>
            <Button
                android:id="@+id/btn_text_language"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changeLang"></Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>