<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Add_SinhVien">

    <TextView
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="#34F10A"
        android:text="@string/add_new_student_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_AnhChup"
                android:layout_width="220dp"
                android:layout_height="138dp"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btnChupH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TAKE_PICTURE" />

                <Button
                    android:id="@+id/btnChonH"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnChupH"
                    android:text="@string/CHOOSE_PICTURE" />
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/ID"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/edt_t_MaSV"
                android:layout_width="wrap_content"
                android:layout_weight="8"
                android:hint="@string/ID"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/class_id"
                android:layout_width="wrap_content"
                android:layout_weight="1.7"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/spinner_t_Malop"
                android:layout_weight="8.3"
                android:layout_width="wrap_content"
                android:layout_height="45dp">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/Full_Name"
                android:layout_width="wrap_content"
                android:layout_weight="2.2"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7.7"
                android:hint="@string/Full_Name"
                android:id="@+id/edt_t_HoTen" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/gender"
                android:layout_width="wrap_content"
                android:layout_weight="1.9"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:id="@+id/rgGioiTinh_t"
                android:layout_weight="8.1"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rbNam"
                    android:text="@string/male"
                    android:checked="true"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rbNu"
                    android:text="@string/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/DOB"
                android:layout_width="wrap_content"
                android:layout_weight="1.6"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8.4"
                android:hint="@string/date"
                android:drawableEnd="@drawable/ic_date_picker"
                android:id="@+id/edt_t_NgaySinh" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_weight="1.9"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8.1"
                android:hint="@string/address"
                android:id="@+id/edt_t_DiaChi"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/PhoneNum"
                android:layout_width="wrap_content"
                android:layout_weight="2.8"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7.2"
                android:hint="@string/PhoneNum"
                android:id="@+id/edt_t_SDT" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnLuu"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:text="@string/add" />

            <Button
                android:layout_marginLeft="50dp"
                android:id="@+id/btnHuy"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:text="@string/Cancel" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>