<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Sua_SinhVien">

    <TextView
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="#34F10A"
        android:text="@string/Profil_Information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_AnhChup"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:scaleType="fitCenter"
                android:src="@drawable/avatar"
                android:clickable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/ID"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/edt_s_MaSV"
                android:layout_width="wrap_content"
                android:layout_weight="8"
                android:hint="@string/ID"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/class_id"
                android:layout_width="wrap_content"
                android:layout_weight="1.7"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/spinner_s_MaLop"
                android:clickable="false"
                android:layout_weight="8.3"
                android:layout_width="wrap_content"
                android:layout_height="45dp">

            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/Full_Name"
                android:layout_width="wrap_content"
                android:layout_weight="2.2"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7.7"
                android:hint="@string/Full_Name"
                android:id="@+id/edt_s_HoTen" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/gender"
                android:layout_width="wrap_content"
                android:layout_weight="1.9"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:id="@+id/rgGioiTinh_s"
                android:layout_weight="8.1"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rbNam"
                    android:text="@string/male"
                    android:enabled="false"
                    android:checked="true"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rbNu"
                    android:text="@string/female"
                    android:enabled="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/DOB"
                android:layout_width="wrap_content"
                android:layout_weight="1.6"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8.4"
                android:hint="@string/DOB"
                android:drawableEnd="@drawable/ic_date_picker"
                android:id="@+id/edt_s_NgaySinh" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_weight="1.9"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8.1"
                android:hint="@string/address"
                android:id="@+id/edt_s_DiaChi"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/PhoneNum"
                android:layout_width="wrap_content"
                android:layout_weight="2.8"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7.2"
                android:hint="@string/PhoneNum"
                android:id="@+id/edt_s_SDT" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnSua"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:text="@string/edit" />
            <Button
                android:id="@+id/btnXoa"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:text="@string/remove" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:text="@string/go_back" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>