<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Add_lophoc">

    <TextView
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="35sp"
        android:background="#34F10A"
        android:text="@string/add_new_class_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/class_id"
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:textSize="18sp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_t_malop"
            android:layout_width="wrap_content"
            android:layout_weight="8"
            android:hint="@string/class_id"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/major"
            android:layout_width="wrap_content"
            android:layout_weight="1.2"
            android:textSize="18sp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_t_TenNganh"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:hint="@string/major"
            android:layout_weight="8.7"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/class_name"
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:textSize="18sp"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/class_name"
            android:id="@+id/edt_t_TenLop"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/teacher"
            android:layout_width="wrap_content"
            android:layout_weight="2.3"
            android:textSize="18sp"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7.7"
            android:hint="@string/teacher"
            android:id="@+id/edt_t_GVCN"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnLuu"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

        <Button
            android:layout_marginLeft="50dp"
            android:id="@+id/btnHuy"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:text="@string/Cancel" />
    </LinearLayout>
</LinearLayout>